[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.13.0"]

[project]
authors = [
  {name = "José Londoño", email = "j.londonobo@gmail.com"},
]
description = "A template package to explore dependency caching"
keywords = ['python', 'github', 'actions', 'caching', 'dependency']
name = "python_caching"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "pandas >=1.1.3,<2.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "python_caching/__init__.py"
